Fix spacing issue on the bridge

--- a/styles/pages/bridge.module.css
+++ b/styles/pages/bridge.module.css
@@ -25,7 +25,6 @@
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 100%;
 	margin-top: 42px;
 }
 .tokenPickerTopContainer {
